# mlcraft

./: AGENT.md  LICENSE  README.md  pyproject.toml
artifacts/btcusdt_demo/: summary.json
artifacts/btcusdt_demo/classification_kfold/: full_report.html  report.html  tuning.json
artifacts/btcusdt_demo/classification_time/: evaluation.html  evaluation.json  full_report.html  schema.json
artifacts/btcusdt_demo/regression_kfold/: full_report.html  report.html  tuning.json
artifacts/btcusdt_demo/regression_time/: evaluation.html  evaluation.json  full_report.html
examples/: basic_usage.py  generate_btcusdt_reports.py  shap_usage.py  tuning_usage.py
src/mlcraft/: __init__.py  errors.py  neo_data_palette.html  typing.py
src/mlcraft.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/mlcraft/core/: __init__.py  prediction.py  results.py  schema.py  task.py
src/mlcraft/data/: __init__.py  adapters.py  containers.py  detection.py  inference.py
src/mlcraft/evaluation/: curves.py  evaluator.py  renderer.py
src/mlcraft/metrics/: __init__.py  classification.py  poisson.py  registry.py  regression.py
src/mlcraft/models/: __init__.py  base.py  catboost_model.py  factory.py  lightgbm_model.py  objectives.py  xgboost_model.py
src/mlcraft/reporting/: __init__.py  full_report.py  html.py  (+2 more)
tests/: btcusdt_regression_h4.parquet  conftest.py
tests/integration/: test_basic_pipeline.py  test_explainability_pipeline.py  test_parquet_end_to_end.py  test_tuning_pipeline.py
tests/optional/: test_shap_optional.py
tests/regression/: test_html_outputs.py
(+39 files in other folders)
