[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlcraft"
version = "0.1.0"
description = "A modular, numpy-first machine learning toolkit with clean object-oriented abstractions."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Florian Bouttier" }
]
dependencies = [
  "numpy>=1.24",
  "jinja2>=3.1",
  "matplotlib>=3.7",
  "optuna>=3.6",
  "shap>=0.45",
  "xgboost>=2.0",
  "lightgbm>=4.0",
  "catboost>=1.2",
]

[project.optional-dependencies]
shap = [
  "shap>=0.45",
]
xgboost = [
  "xgboost>=2.0",
]
lightgbm = [
  "lightgbm>=4.0",
]
catboost = [
  "catboost>=1.2",
]
all = [
  "shap>=0.45",
  "xgboost>=2.0",
  "lightgbm>=4.0",
  "catboost>=1.2",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[project.urls]
Homepage = "https://example.com/mlcraft"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
